yaml/pydb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pydb
  name: pydb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pydb
  strategy: {}
  template:
    metadata:
      labels:
        app: pydb
    spec:
      containers:
      - image: quay.io/uvelyster/mysql:5.7
        name: mysql
        resources: {}
status: {}
