yaml/demosvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demosvc
  name: demosvc
spec:
  ports:
  - name: 5000-5000
    port: 1234
    protocol: TCP
    targetPort: 5000
  selector:
    app: test2
  type: ClusterIP
status:
  loadBalancer: {}
