yaml/websvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: websvc
  name: websvc
spec:
  ports:
  - name: 5000-5000
    port: 1234
    protocol: TCP
    targetPort: 5000
  selector:
    app: demoweb
    svc: web
  type: ClusterIP
status:
  loadBalancer: {}
