yaml/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyweb-domain
spec:
  ingressClassName: nginx
  rules:
  - host: pyweb.mysvc.dom
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pyweb
            port:
              number: 5000
